# ml-in-production-practice

./: .gitignore  AGENTS.md  README copy.md  README.md  setup.sh
module-1/: PRACTICE.md  README.md  modal_hello_world.py  pyproject.toml
module-2/: .gitignore  PRACTICE.md  README.md  pyproject.toml  requirements.test.txt  requirements.txt
module-2/.dvc/: config
module-2/data/: .gitignore  big-data.csv.dvc
module-2/duckdb-mcp/: duckdb_agent.py  duckdb_mcp.py
module-2/dvc_test/mydata/: label_studio.sqlite3
module-2/dvc_test/mydata/export/: project-4-at-2023-11-11-02-39-d414a26a-info.json  project-4-at-2023-11-11-02-39-d414a26a.json  project-4-at-2023-11-11-02-40-d414a26a-info.json
module-2/dvc_test/mydata/media/upload/4/: 57d26f83-generated_examples.json
module-2/inference/: inference_example.py
module-2/labeling/: create_dataset.py  create_dataset_synthetic.py
module-2/labeling_test/: generate_mock_rlhf_dataset.py  generated_examples.json  label-studio-config.xml
module-2/minio_storage/: minio-standalone-dev.yaml  minio_client.py  requirements.txt  test_minio_client.py
module-2/minio_test/: minio-standalone-dev.yaml  requirements.txt  test_minio_client.py
module-2/processing/: inference_example.py  requirements.txt
module-2/streaming-dataset/: mock_data.py  requirements.txt  tutorial.py
module-2/vector-db/: index_milvus.py  rag_cli_application.py  requirements.txt
module-3/: PRACTICE.md  README.md
module-4/: PRACTICE.md  README.md  kfp-inference-pipeline_v1.py  kfp-training-pipeline_v1.py  kfp-training-pipeline_v2.py  requirements.txt
(+196 files in other folders)
